--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-xformers==0.0.22.post7 # --no-use-pep517
-git+https://github.com/facebookresearch/audiocraft.git
+#torch>=2.0
+#transformers>=4.31.0
+xformers==0.0.22.post7 #--no-use-pep517
+#git+https://github.com/facebookresearch/audiocraft.git
+git+https://git@github.com/facebookresearch/audiocraft#egg=audiocraft 
 ffmpeg-python~=0.2.0
-ytube~=15.0.0
+pytube~=15.0.0
